--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,6 @@
     <title>CoderDojo Linz | Chat Beispiel</title>
 </head>
 <body>
-    <h1>Hallo Chat!</h1>
+    <h1>Hallo Chat! The server loves you! </h1>
 </body>
 </html>
